--- a/styles.css
+++ b/styles.css
@@ -3110,7 +3110,7 @@ html, body {
         min-height: 0;
         max-height: none;
         padding: 71px 39px;
-        margin: 50px auto 0 auto;
+        margin: 0 auto;
         background: var(--dark-bg);
         display: block;
         position: relative;
